using System.Collections;
using System.Collections.Generic;
using UnityEditor;
using UnityEngine;

public class PlayerAnimator : MonoBehaviour
{
    private Animator animator;
    private int horizontal;
    private int vertical;
    private bool isAttake;
    private bool isTurn;

    private void Awake()
    {
        animator = GetComponent<Animator>();
        horizontal = Animator.StringToHash("Horizontal");
        vertical = Animator.StringToHash("Vertical");
    
    }
    public void Attake(bool attake)
    {
        if (attake && isAttake==false)
        {
            animator.SetLayerWeight(1, 1f);
            animator.SetBool("IsAttake", true);
            isAttake = true;

        }
        else
        {
            animator.SetBool("IsAttake", false);
        }
    }

    public void IsTurn(bool turn)
    {
       
        if ( turn && isTurn == false)
        {
            
            animator.SetLayerWeight(2, 1f);
            animator.SetBool("IsTurn", true);
            isTurn = true;
        }
        else
        {
            animator.SetBool("IsTurn", false);
        }
    }
    public void Turn()
    {
        isTurn = false;
        animator.SetLayerWeight(2, 0f);
    }

    public void EndAttack()
    {
        isAttake = false;
        animator.SetLayerWeight(1, 0f);
    }
    public void UpdateAnimatorValues(float horizontalMovement,float verticalMovement, bool isRunning)
    {

        //Animation Snapping
        float snappedHorizontal;
        float snappedVertical;

        if (verticalMovement==1 && isRunning==false)
        {
            verticalMovement = 0.5f;
        }
        #region Snapped Horizontal
        if (horizontalMovement >  0 && horizontalMovement < 0.55f )
        {
            snappedHorizontal = 0.5f;
        }
        else if (horizontalMovement > 0.55f)
        {
            snappedHorizontal = 1;
        }
        else if (horizontalMovement<0 && horizontalMovement > -0.55f )
        {
            snappedHorizontal = -0.5f;
        }
        else if (horizontalMovement < -0.55f )
        {
            snappedHorizontal = -1f;
        }
        else
        {
            snappedHorizontal = 0;
        }
        #endregion
        #region Snapped Vertical
        if (verticalMovement > 0 && verticalMovement < 0.55f )
        {
            snappedVertical = 0.5f;
        }
        else if (verticalMovement > 0.55f)
        {
            snappedVertical = 1;
        }
        else if (verticalMovement < 0 && verticalMovement > -0.55f )
        {
            snappedVertical = -0.5f;
        }
        else if (verticalMovement < -0.55f)
        {
            snappedVertical = -1f;
        }
        else
        {
            snappedVertical = 0;
        }
        #endregion

        if (isRunning)
        {
            snappedVertical = 1;
            snappedHorizontal = horizontalMovement;
        }
        
        animator.SetFloat(horizontal, snappedHorizontal, 0.1f, Time.deltaTime);
        animator.SetFloat(vertical, snappedVertical, 0.1f, Time.deltaTime);
    }
}
